# dataframe-expectations

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  release-please-config.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: main.yaml  publish.yaml  release-please.yaml
dataframe_expectations/: __init__.py  expectations_suite.py  expectations_suite.pyi  generate_docs.py  registry.py  result_message.py  sanity_checks.py  suite.py  suite.pyi
dataframe_expectations/core/: __init__.py  aggregation_expectation.py  column_expectation.py  expectation.py  polars_utils.py  pyspark_utils.py  suite_result.py  tagging.py  types.py
dataframe_expectations/docs/: expectations.md
dataframe_expectations/expectations/: __init__.py  aggregation_expectation.py  column_expectation.py  expectation_registry.py  utils.py
dataframe_expectations/expectations/aggregation/: any_value.py  numerical.py  unique.py
dataframe_expectations/expectations/aggregation_expectations/: any_value_expectations.py  numerical_expectations.py  unique.py
dataframe_expectations/expectations/column/: any_value.py  numerical.py  string.py
dataframe_expectations/expectations/column_expectations/: any_value_expectations.py  numerical_expectations.py  string_expectations.py
docs/: Makefile  requirements.txt
docs/source/: adding_expectations.rst  api_reference.rst  conf.py  expectations.rst  getting_started.rst  index.rst
docs/source/_ext/: expectations_autodoc.py
docs/source/_static/: custom.css
docs/source/_templates/: expectations_summary.html
scripts/: README.md  generate_suite_stubs.py  sanity_checks.py
tests/: conftest.py  test_expectations_suite.py  test_result_message.py
tests/base/: test_result_message.py  test_suite.py  test_suite_result.py  test_suite_with_tagging.py  test_tagging.py
tests/core/: test_column_expectations.py  test_expectations.py  test_pyspark_utils.py
tests/expectations/aggregation/any_value_expectations/: test_expect_distinct_column_values_between.py  test_expect_distinct_column_values_equals.py  test_expect_distinct_column_values_greater_than.py  test_expect_distinct_column_values_less_than.py  test_expect_max_null_count.py  (+4 more)
tests/expectations_helper_classes/: test_column_expectations.py  test_expectation_registry.py  test_expectations.py  test_utils.py
tests/expectations_implemented/: template_test_expectation.py
(+55 files in other folders)
