[project]
name = "dataframe-expectations"
version = "0.1.0"
description = "Python library designed to validate Pandas and PySpark DataFrames using customizable, reusable expectations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "pyspark>=4.0.1",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "numpy>=2.3.3",
    "pytest>=8.4.2",
]
