[project]
name = "dataframe-expectations"
version = "0.1.0"
description = "Python library designed to validate Pandas and PySpark DataFrames using customizable, reusable expectations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "pyspark>=4.0.1",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "numpy>=2.3.3",
    "pytest>=8.4.2",
]
docs = [
    "sphinx>=4.0.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx-autobuild>=2021.3.14",
    "pyspark>=3.0.0", # Needed for the Sphinx extension to import expectations
    "pandas>=1.0.0", # Also needed since expectations work with both pandas and pyspark
    "tabulate", # If your code uses tabulate for formatting
    # Add any other dependencies your main package needs
]
